--- a/apply.html
+++ b/apply.html
@@ -52,7 +52,7 @@
         <input type="text" id="section" name="section" required>
       </div>
       <div class="form-row">
-        <label for="email">College Email *</label>
+        <label for="email">College Email (MUST BE COLLEGE EMAIL)*</label>
         <input type="email" id="email" name="email" required>
       </div>
       <div class="form-row">
