--- a/apply.html
+++ b/apply.html
@@ -5,10 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Apply - BuildStorm</title>
   <link rel="stylesheet" href="styleapply.css">
-
-  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-
-  <script src="apply.js" defer></script>
 </head>
 <body>
   <header class="navbar">
@@ -30,71 +26,117 @@
 
   <main class="apply-page">
     <h1>Apply to BuildStorm</h1>
-    <form id="apply-form" class="apply-form">
+
+    <!-- Hidden iframe prevents redirect -->
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+
+    <!-- Google Form Submission -->
+    <form 
+      id="apply-form" 
+      class="apply-form"
+      action="https://docs.google.com/forms/d/e/1FAIpQLSeKvnrx3LWgb983X7IR9ll5eJwbSsY8xVCsOUD0T_0v8Zf2nw/formResponse"
+      method="POST"
+      target="hidden_iframe"
+      onsubmit="return validateForm(event)"
+    >
       <div class="form-row">
         <label for="first-name">First Name *</label>
-        <input type="text" id="first-name" name="first-name" required>
+        <input type="text" id="first-name" name="entry.1451242506" required>
       </div>
+
       <div class="form-row">
         <label for="last-name">Last Name</label>
-        <input type="text" id="last-name" name="last-name">
+        <input type="text" id="last-name" name="entry.1302881192">
       </div>
+
       <div class="form-row">
         <label for="course">Course / Program *</label>
-        <input type="text" id="course" name="course" required>
+        <input type="text" id="course" name="entry.1029624094" required>
       </div>
+
       <div class="form-row">
         <label for="year">College Year *</label>
-        <input type="text" id="year" name="year" required>
+        <input type="text" id="year" name="entry.1271679255" required>
       </div>
+
       <div class="form-row">
         <label for="section">Section *</label>
-        <input type="text" id="section" name="section" required>
+        <input type="text" id="section" name="entry.1910265972" required>
       </div>
+
       <div class="form-row">
-        <label for="email">College Email (MUST BE COLLEGE EMAIL)*</label>
-        <input type="email" id="email" name="email" required>
+        <label for="email">College Email (must end with @sau.ac.in) *</label>
+        <input type="email" id="email" name="entry.852745715" required>
       </div>
+
       <div class="form-row">
         <label for="phone">Phone Number *</label>
-        <input type="tel" id="phone" name="phone" required>
+        <input type="tel" id="phone" name="entry.1636554946" required>
       </div>
+
       <div class="form-row">
         <label for="field">Field You Want to Apply For *</label>
-        <select id="field" name="field" required>
+        <select id="field" name="entry.1126059469" required>
           <option value="" hidden>Select a field</option>
-          <option value="programmer">Programmer</option>
-          <option value="artist">Artist (This includes 3D modeling)</option>
-          <option value="writer">Writer</option>
-          <option value="designer">Designer</option>
-          <option value="musician">Musician</option>
+          <option value="Programmer">Programmer</option>
+          <option value="Artist">Artist (This includes 3D modeling)</option>
+          <option value="Writer">Writer</option>
+          <option value="Designer">Designer</option>
+          <option value="Musician">Musician</option>
         </select>
       </div>
+
       <div class="form-row checkbox-row">
-        <input type="checkbox" id="other-wing" name="other-wing">
+        <input type="checkbox" id="other-wing" name="entry.1254414211">
         <label for="other-wing">Are you a member of any other wing of CSTC?</label>
       </div>
+
       <div class="form-row">
         <label for="familiarity">Are you familiar with the field? *</label>
-        <select id="familiarity" name="familiarity" required>
+        <select id="familiarity" name="entry.546048750" required>
           <option value="" hidden>Select an option</option>
-          <option value="yes">Yes</option>
-          <option value="somewhat">Somewhat</option>
-          <option value="no">No</option>
+          <option value="Yes">Yes</option>
+          <option value="Somewhat">Somewhat</option>
+          <option value="No">No</option>
         </select>
       </div>
+
       <div class="form-row">
         <label for="motivation">Why do you want to join BuildStorm? *</label>
-        <textarea id="motivation" name="motivation" rows="5" required></textarea>
+        <textarea id="motivation" name="entry.1466099069" rows="5" required></textarea>
       </div>
+
       <div class="form-row">
-        <label for="portfolio">Upload portfolio (Completely optional) (Must be a Google Drive link)</label>
-        <input type="text" id="portfolio" name="portfolio">
+        <label for="portfolio">Portfolio (Optional - Google Drive link)</label>
+        <input type="text" id="portfolio" name="entry.9999999999">
       </div>
+
       <div class="form-row">
-        <button type="submit" class="submit-btn" disabled>Submit Application</button>
+        <button type="submit" class="submit-btn">Submit Application</button>
       </div>
     </form>
   </main>
+
+  <script>
+    function validateForm(e) {
+      const email = document.getElementById("email").value.trim();
+      const phone = document.getElementById("phone").value.trim();
+
+      if (!email.endsWith("@sau.ac.in")) {
+        alert("Please use your college email ending with @sau.ac.in");
+        e.preventDefault();
+        return false;
+      }
+
+      if (!/^[0-9]{10}$/.test(phone)) {
+        alert("Please enter a valid 10-digit phone number.");
+        e.preventDefault();
+        return false;
+      }
+
+      alert("Application submitted successfully!");
+      return true; // allows submission to Google Form
+    }
+  </script>
 </body>
 </html>
