--- a/apply.html
+++ b/apply.html
@@ -85,9 +85,14 @@
         </select>
       </div>
 
+      <div class="form-row checkbox-row">
+        <input type="checkbox" id="other-wing" name="entry.1038409586">
+        <label for="other-wing">Are you a member of any other wing of CSTC?</label>
+      </div>
+
       <div class="form-row">
         <label for="familiarity">Are you familiar with the field? *</label>
-        <select id="familiarity" name="entry.546048750" required>
+        <select id="familiarity" name="entry.1466099069" required>
           <option value="" hidden>Select an option</option>
           <option value="Yes">Yes</option>
           <option value="Somewhat">Somewhat</option>
