--- a/apply.html
+++ b/apply.html
@@ -77,7 +77,7 @@
         <select id="field" name="entry.546048750" required>
           <option value="" hidden>Select a field</option>
           <option value="Programmer">Programmer</option>
-          <option value="Artist (Includes both 2D and 3D)">Artist (This includes 3D modeling)</option>
+          <option value="Artist (Includes both 2D and 3D)">Artist (2D or 3D)</option>
           <option value="Writer">Writer</option>
           <option value="Designer">Designer</option>
           <option value="Music Artist">Musician</option>
